force-app/main/default/objects/KCS_Level__c/KCS_Level__c.object-meta.xml
<CustomObject>
    <description>This holds the KCS Level of the User</description>
    <label>KCS Level</label>
    <nameField>
        <label>KCS Level And User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KCS Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>