force-app/main/default/objects/KCS_Level__c/fields/KCS_Level__c.field-meta.xml
<CustomField>
    <fullName>KCS_Level__c</fullName>
    <description>The Level of the KCS User</description>
    <label>KCS Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>