force-app/main/default/objects/KCS_Level__c/fields/KCS_User__c.field-meta.xml
<CustomField>
    <fullName>KCS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KCS User</description>
    <label>KCS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KCS_User</relationshipName>
    <type>Lookup</type>
</CustomField>