force-app/main/default/objects/KCS_Level__c/fields/Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Key_Field__c</fullName>
    <description>This field stops duplicates</description>
    <label>Key Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>